--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==22.1.0
 aiogram==2.24
 aiohttp==3.8.3
 aiosignal==1.3.1
@@ -9,6 +10,7 @@ black==22.12.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
+et-xmlfile==1.1.0
 frozenlist==1.3.3
 h11==0.14.0
 httpcore==0.16.3
@@ -17,11 +19,17 @@ idna==3.4
 magic-filter==1.0.9
 multidict==6.0.4
 mypy-extensions==0.4.3
+numpy==1.24.2
+openpyxl==3.1.0
+pandas==1.5.3
 pathspec==0.11.0
 platformdirs==2.6.2
+python-dateutil==2.8.2
 python-decouple==3.7
 python-telegram-bot==20.0
 pytz==2022.7.1
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.0
+yadisk-async==1.4.0
 yarl==1.8.2
