--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ aiogram==2.24
 aiohttp==3.8.3
 aiosignal==1.3.1
 anyio==3.6.2
+APScheduler==3.10.0
 async-timeout==4.0.2
 attrs==22.2.0
 Babel==2.9.1
-black==22.12.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
@@ -28,8 +28,12 @@ python-dateutil==2.8.2
 python-decouple==3.7
 python-telegram-bot==20.0
 pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
 rfc3986==1.5.0
 six==1.16.0
 sniffio==1.3.0
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
 yadisk-async==1.4.0
 yarl==1.8.2
